Add injection dependency by TSyringe

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "uuid": "^9.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.7.1"
+    "@prisma/client": "^4.7.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0"
   }
 }
