--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   }
