--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.6.0",
     "tsyringe": "^4.7.0"
   }
 }
